# pandoc-csv2table

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  TEST.md  csv2table.cabal  csv2table.hs  pandoc-csv2table.cabal  stack.yaml
Examples/: example-postprocessed.md  example.html  example.md
Examples/csv/: grid.csv  multiline.csv  pipe.csv  simple.csv
src/Text/Table/: Builder.hs  Definition.hs  Helper.hs  Tablify.hs
