Name:                 pandoc-csv2table
Version:              1.0.8
Synopsis:             Convert CSV to Pandoc Table Markdown
Description:          A Pandoc filter that replaces image inline or fenced code
                      blocks with pandoc table markdown. CSV contents will be
                      parsed by the pandoc markdown reader.
Homepage:             https://github.com/baig/pandoc-csv2table-filter
Bug-Reports:          https://github.com/baig/pandoc-csv2table-filter/issues
License:              MIT
License-File:         LICENSE
Author:               Wasif Hasan Baig <pr.wasif@gmail.com>
Maintainer:           Venkateswara Rao Mandela <venkat.mandela@gmail.com>
Copyright:            (c) 2015-2020 Wasif Hasan Baig, Venkateswara Rao Mandela
Stability:            alpha
Category:             Text
Build-Type:           Simple
Data-Files:           README.md
Extra-Source-Files:   CHANGELOG.md
Cabal-Version:        >=1.10
Source-repository     head
  type:               git
  location:           git://github.com/baig/pandoc-csv2table-filter.git

Library
  Build-Depends:      base >=4.6 && <5,
                      csv >= 0.1.2,
                      text >= 0.11 && < 1.3,
                      pandoc >= 1.13.0.0,
                      pandoc-types >= 1.12.0.0
  Hs-Source-Dirs:     src
  Default-Extensions: CPP
  Exposed-Modules:    Text.Table.Definition,
                      Text.Table.Builder,
                      Text.Table.Helper
                      Text.Table.Tablify
  Buildable:          True
  Default-Language:   Haskell2010

Executable pandoc-csv2table
  Build-Depends:      base >=4.6 && <5,
                      csv >= 0.1.2,
                      pandoc >= 1.13.0.0,
                      pandoc-types >= 1.12.0.0,
                      pandoc-csv2table
  Hs-Source-Dirs:     .
  Main-Is:            csv2table.hs
  Buildable:          True
  Default-Language:   Haskell2010

